force-app/main/default/objects/Scholarship_Master__c/Scholarship_Master__c.object-meta.xml
<CustomObject>
    <label>Scholarship Master</label>
    <nameField>
        <displayFormat>SMN-{0000}</displayFormat>
        <label>Scholarship Master Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scholarship Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>