force-app/main/default/objects/Scholarship_Master__c/fields/Applicable_for_All_Years__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_All_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicable for All Years</label>
    <type>Checkbox</type>
</CustomField>