force-app/main/default/objects/Scholarship_Master__c/fields/Discount_Amount_3_Year__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_3_Year__c</fullName>
    <label>Discount Amount 3rd Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>