force-app/main/default/objects/Scholarship_Master__c/fields/Discount_Amount_4_Year__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_4_Year__c</fullName>
    <label>Discount Amount 4th Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>