force-app/main/default/objects/Scholarship_Master__c/fields/Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Documents_Required__c</fullName>
    <label>Documents Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>12th/PUC Marks Card</fullName>
            </value>
            <value>
                <fullName>A Certificate</fullName>
            </value>
            <value>
                <fullName>Award for Gallantry</fullName>
            </value>
            <value>
                <fullName>B Certificate</fullName>
            </value>
            <value>
                <fullName>Bonafide letter</fullName>
            </value>
            <value>
                <fullName>C Certificate</fullName>
            </value>
            <value>
                <fullName>Degree Marks Card</fullName>
            </value>
            <value>
                <fullName>Degree Marks Card - Consolidated</fullName>
                <isActive>false</isActive>
                <label>Degree Marks Card - Consolidated</label>
            </value>
            <value>
                <fullName>Degree Marks Card - Semesterwise</fullName>
            </value>
            <value>
                <fullName>JEE Score Card</fullName>
            </value>
            <value>
                <fullName>Killed/Disabled in action</fullName>
            </value>
            <value>
                <fullName>NATA Score Card</fullName>
            </value>
            <value>
                <fullName>NEET Score Card</fullName>
            </value>
            <value>
                <fullName>PUC/Intermediate/12th Marks Card</fullName>
                <isActive>false</isActive>
                <label>PUC/Intermediate/12th Marks Card</label>
            </value>
            <value>
                <fullName>PUC ID card</fullName>
            </value>
            <value>
                <fullName>RDC Certificate</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>REVA ID Card</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Single Girl Child</fullName>
            </value>
            <value>
                <fullName>Specially Abled</fullName>
            </value>
            <value>
                <fullName>Sports Highest Level Certificate</fullName>
            </value>
            <value>
                <fullName>TSC Certificate</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>Widows</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>YEP Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>