force-app/main/default/objects/Scholarship_Master__c/fields/Enrollment_year__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_year__c</fullName>
    <label>Enrollment year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>