force-app/main/default/objects/Scholarship_Master__c/fields/Scholarship_Type__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Type__c</fullName>
    <label>Scholarship Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>75.01 - 85.00</fullName>
            </value>
            <value>
                <fullName>85.00 to 90.00</fullName>
            </value>
            <value>
                <fullName>90.01 &amp; Above</fullName>
            </value>
            <value>
                <fullName>80.00 - 85.00</fullName>
            </value>
            <value>
                <fullName>85.01 &amp; Above</fullName>
            </value>
            <value>
                <fullName>B.Tech/B.Arch/MBA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>60.00 - 69.99</fullName>
            </value>
            <value>
                <fullName>70.00 - 84.99</fullName>
            </value>
            <value>
                <fullName>85.00 &amp; Above</fullName>
            </value>
            <value>
                <fullName>100 - 109</fullName>
            </value>
            <value>
                <fullName>110 - 124</fullName>
            </value>
            <value>
                <fullName>125 &amp; Above</fullName>
            </value>
            <value>
                <fullName>400 - 499</fullName>
            </value>
            <value>
                <fullName>500 - 599</fullName>
            </value>
            <value>
                <fullName>600 &amp; Above</fullName>
            </value>
            <value>
                <fullName>B.Tech. in School of EEE</fullName>
            </value>
            <value>
                <fullName>B.Tech. in School of Mechanical Engineering</fullName>
            </value>
            <value>
                <fullName>B.Tech. in School of Civil Engineering</fullName>
            </value>
            <value>
                <fullName>M.Tech. All Schools</fullName>
            </value>
            <value>
                <fullName>UG Non-Tech (Except BBA/BCA/B.Com)</fullName>
            </value>
            <value>
                <fullName>PG Programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>