force-app/main/default/objects/Scholarship_Master__c/validationRules/Discount_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  NOT(ISBLANK( Discount_Amount__c )), 
  NOT(ISBLANK( Discount_Percent__c )) 
)</errorConditionFormula>
    <errorMessage>You can&apos;t Enter the value for Both  Discount Amount and Discount Percent Fields.</errorMessage>
</ValidationRule>