force-app/main/default/objects/Scholarship_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_year__c</columns>
    <columns>Category__c</columns>
    <columns>Applicable_for_All_Years__c</columns>
    <columns>Documents_Required__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Scholarship_Type__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>